# rtm

./: .gitignore  CLAUDE.md  README.md  devenv.nix  main.py  pyproject.toml  shell.nix
annotations/extraction_gold/: day1_consultation01.json  day1_consultation01_transcript.md  day1_consultation02.json  day1_consultation02_transcript.md  day1_consultation03.json  day1_consultation03_transcript.md  day1_consultation04.json  day1_consultation04_transcript.md  day1_consultation05.json  day1_consultation05_transcript.md
references/md/: datalab-output-Developing a scalable FHIR-based clinical data normalization pipeline for standardizing and integrating unstructured and structured electronic health record data.pdf.md  datalab-output-Empirical Findings on the Role of Structured Data, Unstructured Data, and their Combination for Automatic Clinical Phenotyping.pdf.md  datalab-output-Enhancing Clinical Data Capture_ Developing a Natural Language Processing Pipeline for Converting Free Text Admission Notes to Structured EHR Data.pdf.md  (+14 more)
research/: abstract.tex  asr.md  bibliography.tex  evaluation-plan-short.md  evaluation-plan.md  figure.tex  full-research.tex  introduction.tex  literature-review.tex  methodology.tex  pipeline.md  results.tex
research/docs/: evaluation-plan.md  pipeline.md  (+1 more)
scripts/: evaluate_extraction_gold.py  evaluate_primock57_audio.py  generate_audio_benchmark_report.py  generate_extraction_report.py  mix_primock57.py  run_pipeline_folder.py  scaffold_extraction_gold.py  summarize_results_table.py
src/: app.py  main.py
tests/: test_extraction_eval.py
(+99 files in other folders)
