[project]
name = "rtm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.10.2",
    "soundfile>=0.12",
    "noisereduce>=3.0",
    "webrtcvad-wheels",
    "numpy>=2.0",
    "pyannote-audio>=4.0.4",
    "transformers>=4.40",
    "accelerate>=0.26",
    "agno>=2.5.9",
    "openai>=2.26.0",
    "fhir-resources>=8.2.0",
]
